# RustyPhotography

./: .gitignore  Cargo.toml  main.tf  package.json  serverless.yml
photography-api/: Cargo.toml
photography-api/src/: create_photograph.rs  edit_layout.rs  edit_photograph.rs  get_photograph.rs  lib.rs  list_photographs.rs  models.rs
photography-data/: Cargo.toml
photography-data/src/: client.rs  lib.rs  photograph.rs
photography-lambda/: Cargo.toml
photography-lambda/src/: config.rs  lib.rs
photography-local/: Cargo.toml
photography-local/src/: lib.rs
photography-processing/: Cargo.toml
photography-processing/src/: lib.rs  model.rs  processor.rs  s3_storage.rs  sns_notifier.rs  thumbnail.rs
photography-site-gen/: Cargo.toml
photography-site-gen/src/: files.rs  handlebars_file.rs  lib.rs  model.rs  s3_image_provider.rs  s3_site_storer.rs
src/: create_photograph.rs  edit_layout.rs  edit_photograph.rs  get_photograph.rs  lib.rs  list_photographs.rs  models.rs
src/config/: mod.rs
src/data/: image.rs  layout.rs  mod.rs  photograph.rs
src/image_processing/: mod.rs  s3_storage.rs  sns_notifier.rs  thumbnail.rs
src/site_gen/: files.rs  handlebars_file.rs  image_provider.rs  mod.rs  site_storer.rs
static/: _layout.hbs  about.html.hbs  gear.html.hbs  index.html.hbs
static/assets/: site.css.hbs
terraform/: buckets.tf  cognito-iam.tf  cognito.tf  database.tf  vpc.tf
