[package]
name = "photography"
version = "0.1.0"
authors = ["Will Smith <will@toxon.co.uk>"]
edition = "2018"

[dependencies]
lambda_runtime = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["json"] }
rocket_lamb = "0.6.0"