[package]
name = "photography-api"
version = "0.1.0"
authors = ["Will Smith <will@toxon.co.uk>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
photography-data = { path = "../photography-data" }
photography-processing = { path = "../photography-processing" }
photography-site-gen = { path = "../photography-site-gen" }
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

# TODO remove these once photography-data stops leaking dynamodb
rusoto_dynamodb = "0.42"
serde_dynamodb = "0.4"