[package]
name = "photography-data"
version = "0.1.0"
authors = ["Will Smith <will@toxon.co.uk>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusoto_dynamodb = "0.42"
serde = { version = "1.0", features = ["derive"] }
serde_dynamodb = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }