[package]
name = "photography-lambda"
version = "0.1.0"
authors = ["Will Smith <will@toxon.co.uk>"]
edition = "2018"

[dependencies]
aws_lambda_events = "0.2"
lambda_runtime = "0.2"
photography-api = { path = "../photography-api" }
photography-data = { path = "../photography-data" }
photography-processing = { path = "../photography-processing" }
photography-site-gen = { path = "../photography-site-gen" }
rocket_lamb = "0.6"
rusoto_core = "0.42"
rusoto_dynamodb = "0.42"
rusoto_s3 = "0.42"
rusoto_sns = "0.42"
rusoto_ssm = "0.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"