[package]
name = "photography-processing"
version = "0.1.0"
authors = ["Will Smith <will@toxon.co.uk>"]
edition = "2018"

[dependencies]
image = "0.22"
photography-data = { path = "../photography-data" }
rusoto_dynamodb = "0.42"
rusoto_s3 = "0.42"
rusoto_sns = "0.42"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_dynamodb = "0.4"
serde_json = "1.0"