[package]
name = "photography-site-gen"
version = "0.1.0"
authors = ["Will Smith <will@toxon.co.uk>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
handlebars = "2.0"
photography-data = { path = "../photography-data" }
rusoto_core = "0.42"
rusoto_s3 = "0.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
